force-app/main/default/objects/FormFieldValue__c/FormFieldValue__c.object-meta.xml
<CustomObject>
    <label>Resposta do Formulário</label>
    <nameField>
        <displayFormat>RF-{000000}</displayFormat>
        <label>Nome da Resposta do Formulário</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Respostas do Formulário</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>