force-app/main/default/objects/FormFieldValue__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <label>Resposta</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>