force-app/main/default/objects/FormFieldValue__c/fields/DynamicForm__c.field-meta.xml
<CustomField>
    <fullName>DynamicForm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Formulário Dinâmico</label>
    <referenceTo>DynamicForm__c</referenceTo>
    <relationshipLabel>Respostas do Formulário</relationshipLabel>
    <relationshipName>Respostas_do_Formul_rio</relationshipName>
    <type>Lookup</type>
</CustomField>