force-app/main/default/objects/FormFieldValue__c/fields/FormField__c.field-meta.xml
<CustomField>
    <fullName>FormField__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campo do Formulário</label>
    <referenceTo>FormField__c</referenceTo>
    <relationshipLabel>Respostas do Formulário</relationshipLabel>
    <relationshipName>Respostas_do_Formul_rio</relationshipName>
    <type>Lookup</type>
</CustomField>