force-app/main/default/objects/FormFieldValue__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <label>Id do Registro</label>
    <type>TextArea</type>
</CustomField>